IE8 moved to separate file and more grid examples
Updated Grid examples with extra styles available (RTL, gutter,
tightness), moved grid calculations to calculations file for independent
Mixin support.

Added a toggle for fluid or max-width grid size.

Moved IE8 css file to separate file - saves 5KB for non-IE8 browsers.
All IE8 LESS should go in the separate file.

--- a/assets/less/base/_variables.less
+++ b/assets/less/base/_variables.less
@@ -8,8 +8,22 @@
 // DEBUG
 // ----------------------------------------------------
 
-@DEBUG:                         false;
-@DEBUGGER:						true;
+@DEBUG: 						false;
+@DEBUGGER: 						true;
+
+// DOTLESS
+// ----------------------------------------------------
+// Using DotLess (escaped expressions) or 'standard' LESS?
+// LESS won't ignore escaped expression so still have to search for and
+// uncomment DotLess markup, designated with this variable:
+@COMPILER-DotLess: 				false;
+
+// IE8 Compatible Functions
+// There is a separate IE8-only stylesheet, which reduces the 5KB+ of specific
+// IE8 classes that most users won't need. In addition, extra classes can
+// still be included:
+@IE8-Compatible: 				true;
+
 
 // COLOURS
 // ----------------------------------------------------
@@ -192,6 +206,7 @@
 @GRID-MaxWidth:                 980;
 @GRID-GutterWidth:              20;
 @GRID-MobileGutterWidth:        10;
+@GRID-FluidWidth:		        false; // False uses max-width, True uses 10% padding-wdith.
 
 // MEDIA QUERIES
 // ----------------------------------------------------
