--- a/content/Alloy/Systems/grids.hbs
+++ b/content/Alloy/Systems/grids.hbs
@@ -314,7 +314,6 @@ page-category: "systems"
 		<div class="c__lg--4-8"><div class="gex">4-8</div></div>
 		<div class="c__lg--4-8"><div class="gex">4-8</div></div>
 	</div>
-	</div>
 
 	<div class="g">
 		<div class="c__lg--1"><h2>Grid of 7's</h2></div>
@@ -346,7 +345,6 @@ page-category: "systems"
 		<div class="c__lg--2-5"><div class="gex">2-5</div></div>
 		<div class="c__lg--3-5"><div class="gex">3-5</div></div>
 	</div>
-	</div>
 
 	<div class="g">
 		<div class="c__lg--1"><h2>Grid of 4's</h2></div>
@@ -371,6 +369,80 @@ page-category: "systems"
 		<div class="c__lg--1-2"><div class="gex">1-2</div></div>
 	</div>
 </div>
+
+
+
+<div class="w w--example">
+
+	<div class="g g--rtl"> <!-- rtl -->
+		<div class="c__lg--1"><h2>Grid -- Right To Left</h2></div>
+		<div class="c__lg--6-6"><div class="gex">6-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--5-6"><div class="gex">5-6</div></div>
+		<div class="c__lg--2-6"><div class="gex">2-6</div></div>
+		<div class="c__lg--4-6"><div class="gex">4-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+	</div>
+
+	<div class="g g--nogutter"> <!-- nogutter -->
+		<div class="c__lg--1"><h2>Grid -- No Gutter</h2></div>
+		<div class="c__lg--6-6"><div class="gex">6-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--5-6"><div class="gex">5-6</div></div>
+		<div class="c__lg--2-6"><div class="gex">2-6</div></div>
+		<div class="c__lg--4-6"><div class="gex">4-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+	</div>
+
+	<div class="g g--halfgutter"> <!-- halfgutter -->
+		<div class="c__lg--1"><h2>Grid -- Half Gutter</h2></div>
+		<div class="c__lg--6-6"><div class="gex">6-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--5-6"><div class="gex">5-6</div></div>
+		<div class="c__lg--2-6"><div class="gex">2-6</div></div>
+		<div class="c__lg--4-6"><div class="gex">4-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+		<div class="c__lg--3-6"><div class="gex">3-6</div></div>
+	</div>
+
+	<div class="g"> <!-- Offset -->
+		<div class="c__lg--1"><h2>Offset Grid</h2></div>
+		<div class="o__lg--1-16 c__lg--15-16"><div class="gex">1-1</div></div>
+		<div class="o__lg--1-15 c__lg--14-15"><div class="gex">14-15</div></div>
+		<div class="o__lg--1-14 c__lg--13-14"><div class="gex">13-14</div></div>
+		<div class="o__lg--1-13 c__lg--12-13"><div class="gex">12-13</div></div>
+		<div class="o__lg--1-12 c__lg--11-12"><div class="gex">11-12</div></div>
+		<div class="o__lg--1-11 c__lg--10-11"><div class="gex">10-11</div></div>
+		<div class="o__lg--1-10 c__lg--9-10"><div class="gex">9-10</div></div>
+		<div class="o__lg--1-9 c__lg--8-9"><div class="gex">8-9</div></div>
+		<div class="o__lg--1-8 c__lg--7-8"><div class="gex">7-8</div></div>
+		<div class="o__lg--1-7 c__lg--6-7"><div class="gex">6-7</div></div>
+		<div class="o__lg--1-6 c__lg--5-6 o__md--1-6 c__md--5-6"><div class="gex">5-6 + @MQ-Medium</div></div>
+		<div class="o__lg--1-5 c__lg--4-5 o__md--1-5 c__md--4-5"><div class="gex">4-5 + @MQ-Medium</div></div>
+		<div class="o__lg--1-4 c__lg--3-4 o__md--1-4 c__md--3-4"><div class="gex">3-4 + @MQ-Medium</div></div>
+		<div class="o__lg--1-3 c__lg--2-3 o__md--1-3 c__md--2-3"><div class="gex">2-3 + @MQ-Medium</div></div>
+		<div class="o__lg--1-2 c__lg--1-2 o__md--1-2 c__md--1-2"><div class="gex">1-2 + @MQ-Medium</div></div>
+	</div>
+
+	<div class="g"> <!-- Tightness -->
+		<div class="c__lg--1"><h2>Grid Tightness (default is equivalent to 1/12 column width on each side)</h2></div>
+	</div>
+	<div class="g g--tight">
+		<div class="c__lg--1"><div class="gex">tight</div></div>
+	</div>
+	<div class="g g--tighter">
+		<div class="c__lg--1"><div class="gex">tighter</div></div>
+	</div>
+	<div class="g g--tightest">
+		<div class="c__lg--1"><div class="gex">tightest</div></div>
+	</div>
+	<div class="g g--wide">
+		<div class="c__lg--1"><div class="gex">wide</div></div>
+	</div>
+</div>
+
 
 <!-- code -->
 
