--- a/content/Alloy/Systems/images.hbs
+++ b/content/Alloy/Systems/images.hbs
@@ -35,10 +35,10 @@ page-category: "systems"
 		            <div class="section__body">
 				        <!-- code -->
 
-				        <img src="https://placehold.it/200x200" class="image" alt="" />
-				        <img src="https://placehold.it/200x200" class="image image--rounded" alt="" />
-				        <img src="https://placehold.it/200x200" class="image image--circle" alt="" />
-				        <img src="https://placehold.it/200x200" class="image image--bordered" alt="" />
+				        <img src="https://pic.jcmserv3.net/200x200" class="image" alt="" />
+				        <img src="https://pic.jcmserv3.net/200x200" class="image image--rounded" alt="" />
+				        <img src="https://pic.jcmserv3.net/200x200" class="image image--circle" alt="" />
+				        <img src="https://pic.jcmserv3.net/200x200" class="image image--bordered" alt="" />
 
 				        <!-- end of code -->
 			        </div>
@@ -54,10 +54,10 @@ page-category: "systems"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-&lt;img src="https://placehold.it/200x200" class="image" alt="" /&gt;
-&lt;img src="https://placehold.it/200x200" class="image image--rounded" alt="" /&gt;
-&lt;img src="https://placehold.it/200x200" class="image image--circle" alt="" /&gt;
-&lt;img src="https://placehold.it/200x200" class="image image--bordered" alt="" /&gt;
+&lt;img src="https://pic.jcmserv3.net/200x200" class="image" alt="" /&gt;
+&lt;img src="https://pic.jcmserv3.net/200x200" class="image image--rounded" alt="" /&gt;
+&lt;img src="https://pic.jcmserv3.net/200x200" class="image image--circle" alt="" /&gt;
+&lt;img src="https://pic.jcmserv3.net/200x200" class="image image--bordered" alt="" /&gt;
 			            </code></pre>
 		            </div>
 
